Added note regarding not being mobile-friendly yet

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -103,8 +103,10 @@ params:
       <br/>
       i hope you enjoy them as much as i do creating them! 🌷
       <br/><br/>
-      → [`ascii playground`](/playground)
-      <br/><br/>
+        - → [`ascii playground`](/playground)
+          - unfortunately, this playground is not mobile-friendly *yet*. 😅
+
+      <br/>
       check out my socials below and feel free to reach out to me if you have any questions or feedback.
 
       
