Refactor GitHub Actions workflow for metrics

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,88 @@
 name: Metrics
+
 on:
   # Schedule daily updates
-  schedule: [{cron: "0 0 * * *"}]
+  schedule:
+    - cron: "0 0 * * *"
   # (optional) Run workflow manually
   workflow_dispatch:
   # (optional) Run workflow when pushing on master/main
-  push: {branches: ["master", "main"]}
+  push:
+    branches: ["master", "main"]
+
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
-    environment: 
+    environment:
       name: production
     permissions:
       contents: write
+
     steps:
-      - uses: lowlighter/metrics@latest
+      - name: Generate brutalist textmode metrics
+        uses: lowlighter/metrics@latest
         with:
+          # Required
           token: ${{ secrets.METRICS_TOKEN }}
+
+          # Explicit, though it defaults to repo owner
+          user: humanbydefinition
+
+          # Output file (default would be github-metrics.svg)
+          filename: github-metrics.svg
+
+          # Overall look: terminal = textmode style
+          template: terminal
+
+          # Minimal core sections
+          base: header, repositories
+
+          # Make stats match your actual timezone
+          config_timezone: Europe/Berlin
+
+          # Vertical order of sections
+          config_order: base.header, languages, repositories, lines
+
+          # --- Plugins ---
+
+          # Languages bar
+          plugin_languages: yes
+          plugin_languages_sections: most-used
+          plugin_languages_ignored: >-
+            html, css
+          plugin_languages_details: bytes-size, percentage
+
+          # Pinned repos (show your key ASCII/textmode projects)
+          plugin_repositories: yes
+          plugin_repositories_pinned: 4
+
+          # Lines of code changed
+          plugin_lines: yes
+
+          # Optional: uncomment if you want an activity “habits” block too
+          # plugin_habits: yes
+          # plugin_habits_facts: yes
+          # plugin_habits_charts: yes
+
+          # --- Styling: brutalist / textmode ---
+
+          extras_css: |
+            /* Monospace, grid-y, terminal-ish */
+            svg {
+              font-family: "JetBrains Mono", "Fira Code", Consolas, Menlo, monospace;
+              letter-spacing: 0.08em;
+            }
+
+            h1, h2, h3 {
+              text-transform: uppercase;
+            }
+
+            /* Slightly chunkier headings */
+            h1 {
+              font-size: 1.2em;
+            }
+
+            /* Subtle borders for a brutalist card feel */
+            .items, .row, .column {
+              border: 1px solid #ffffff22;
+            }
