--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,15 @@
 name: Metrics
 
 on:
-  # Schedule daily updates
   schedule:
     - cron: "0 0 * * *"
-  # (optional) Run workflow manually
   workflow_dispatch:
-  # (optional) Run workflow when pushing on master/main
   push:
     branches: ["master", "main"]
+
+concurrency:
+  group: metrics-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   github-metrics:
@@ -19,70 +20,102 @@ jobs:
       contents: write
 
     steps:
-      - name: Generate brutalist textmode metrics
-        uses: lowlighter/metrics@latest
+      - name: Generate brutalist textmode metrics (Bescii-Mono)
+        uses: lowlighter/metrics@v3.34
         with:
           # Required
           token: ${{ secrets.METRICS_TOKEN }}
 
-          # Explicit, though it defaults to repo owner
+          # Account
           user: humanbydefinition
 
-          # Output file (default would be github-metrics.svg)
+          # Output
           filename: github-metrics.svg
 
-          # Overall look: terminal = textmode style
+          # Look & layout
           template: terminal
-
-          # Minimal core sections
           base: header, repositories
-
-          # Make stats match your actual timezone
           config_timezone: Europe/Berlin
-
-          # Vertical order of sections
           config_order: base.header, languages, repositories, lines
 
           # --- Plugins ---
-
-          # Languages bar
           plugin_languages: yes
           plugin_languages_sections: most-used
           plugin_languages_ignored: >-
             html, css
           plugin_languages_details: bytes-size, percentage
 
-          # Pinned repos (show your key ASCII/textmode projects)
           plugin_repositories: yes
           plugin_repositories_pinned: 4
 
-          # Lines of code changed
           plugin_lines: yes
 
-          # Optional: uncomment if you want an activity “habits” block too
-          # plugin_habits: yes
-          # plugin_habits_facts: yes
-          # plugin_habits_charts: yes
-
-          # --- Styling: brutalist / textmode ---
-
+          # --- Styling (includes Bescii-Mono + header button fix) ---
           extras_css: |
-            /* Monospace, grid-y, terminal-ish */
+            /* ---------------------------------------------------------
+               Font: Bescii-Mono (Codeberg raw)
+               --------------------------------------------------------- */
+
+            @font-face {
+              font-family: "Bescii Mono";
+              src:
+                url("https://codeberg.org/Dmian/font-bescii/raw/branch/main/fonts/v3/Bescii-Mono.woff2") format("woff2"),
+                url("https://codeberg.org/Dmian/font-bescii/raw/branch/main/fonts/v3/Bescii-Mono.woff") format("woff"),
+                url("https://codeberg.org/Dmian/font-bescii/raw/branch/main/fonts/v3/Bescii-Mono.ttf") format("truetype");
+              font-weight: 400;
+              font-style: normal;
+              font-display: swap;
+            }
+
+            /* Apply Bescii to the terminal content */
             svg {
-              font-family: "JetBrains Mono", "Fira Code", Consolas, Menlo, monospace;
+              font-family: "Bescii Mono", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
               letter-spacing: 0.08em;
+            }
+
+            /* Slightly tighter, more pixel-font-friendly rhythm */
+            pre, code, text, tspan {
+              font-family: "Bescii Mono", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+            }
+
+            /* Brutalist framing */
+            .items, .row, .column {
+              border: 1px solid #ffffff22;
             }
 
             h1, h2, h3 {
               text-transform: uppercase;
             }
 
-            /* Slightly chunkier headings */
             h1 {
               font-size: 1.2em;
             }
 
-            /* Subtle borders for a brutalist card feel */
-            .items, .row, .column {
-              border: 1px solid #ffffff22;
+            /* ---------------------------------------------------------
+               Fix: window header buttons (glyphs misaligned with pixel fonts)
+               Strategy:
+               - force header back to system UI font (better vertical metrics)
+               - center header glyphs via baseline + line-height rules
+               --------------------------------------------------------- */
+
+            header,
+            header * {
+              font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif !important;
+              letter-spacing: 0 !important;
+            }
+
+            /* Center SVG text in header reliably */
+            header text,
+            header tspan {
+              dominant-baseline: middle;
+              alignment-baseline: middle;
+            }
+
+            /* If the buttons are spans/groups, make them flex-centered (harmless if not) */
+            header span,
+            header a,
+            header .button,
+            header .buttons,
+            header .buttons * {
+              line-height: 1 !important;
             }
