--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,6 @@ concurrency:
 
 jobs:
   github-metrics:
-    # Critical: ubuntu-latest is now 24.04; released Metrics image can fail building there.
     runs-on: ubuntu-22.04
     environment:
       name: production
@@ -21,7 +20,7 @@ jobs:
       contents: write
 
     steps:
-      - name: Generate brutalist textmode metrics
+      - name: Generate macOS-style terminal metrics
         uses: lowlighter/metrics@v3.34
         with:
           token: ${{ secrets.METRICS_TOKEN }}
@@ -44,22 +43,106 @@ jobs:
           plugin_lines: yes
 
           extras_css: |
-            /* Monospace, grid-y, terminal-ish */
+            /* =========================================================
+               macOS-ish Terminal look
+               - soft shadows
+               - rounded "window"
+               - titlebar gradient
+               - traffic-light buttons
+               - SF-mono-ish typography
+               ========================================================= */
+
+            /* Overall typography: close to SF Mono vibe using common fallbacks */
             svg {
-              font-family: "JetBrains Mono", "Fira Code", Consolas, Menlo, monospace;
-              letter-spacing: 0.08em;
+              font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+              letter-spacing: 0.02em;
             }
 
-            h1, h2, h3 {
-              text-transform: uppercase;
+            /* Window framing: round + subtle shadow */
+            section {
+              border-radius: 14px !important;
+              overflow: hidden;
+              box-shadow:
+                0 12px 30px rgba(0, 0, 0, 0.45),
+                0 2px 10px rgba(0, 0, 0, 0.25);
+              border: 1px solid rgba(255, 255, 255, 0.08);
+              background: rgba(20, 20, 24, 0.98);
             }
 
-            /* Slightly chunkier headings */
-            h1 {
-              font-size: 1.2em;
+            /* Titlebar: macOS-ish dark gradient */
+            header {
+              background: linear-gradient(180deg, rgba(55, 55, 60, 0.95), rgba(35, 35, 40, 0.95)) !important;
+              border-bottom: 1px solid rgba(255, 255, 255, 0.10);
+              padding-top: 10px;
+              padding-bottom: 10px;
             }
 
-            /* Subtle borders for a brutalist card feel */
+            /* Header text: slightly softer + centered feel */
+            header text,
+            header tspan {
+              font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif !important;
+              letter-spacing: 0.01em !important;
+              opacity: 0.92;
+              dominant-baseline: middle;
+              alignment-baseline: middle;
+            }
+
+            /* Content area: terminal “ink” */
             .items, .row, .column {
-              border: 1px solid #ffffff22;
+              border: 0;
+            }
+
+            /* Subtle separators like Terminal tabs/panes */
+            .row, .column, .items {
+              stroke: rgba(255,255,255,0.06);
+            }
+
+            /* Make headings less shouty, more macOS */
+            h1, h2, h3 {
+              text-transform: none;
+              letter-spacing: 0.01em;
+            }
+
+            h1 {
+              font-size: 1.08em;
+              font-weight: 600;
+              opacity: 0.95;
+            }
+
+            /* Slightly soften all text for “retina” feel */
+            text, tspan {
+              opacity: 0.94;
+            }
+
+            /* =========================================================
+               Traffic lights (buttons) polish
+               We can't guarantee exact element structure, so we:
+               - keep existing circles
+               - add subtle highlights via strokes
+               - ensure glyph alignment doesn't drift
+               ========================================================= */
+
+            /* If the titlebar uses circles for the three buttons, make them crisp */
+            header circle {
+              stroke: rgba(0,0,0,0.35);
+              stroke-width: 0.9;
+            }
+
+            /* If icons exist as paths inside header, nudge their contrast */
+            header path {
+              opacity: 0.85;
+            }
+
+            /* Ensure any small glyph-like icons align nicely */
+            header tspan {
+              dominant-baseline: middle;
+              alignment-baseline: middle;
+            }
+
+            /* =========================================================
+               Optional: make language bars / small charts feel “native”
+               ========================================================= */
+            .chart, .chart text, .chart tspan {
+              opacity: 0.92;
+              letter-spacing: 0.01em;
             }
